--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
-Hell world
+<!doctype html>
+
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+
+    <title>You've been hacked</title>
+    <meta name="author" content="find_me">
+
+    <link rel="stylesheet" href="css/styles.css">
+
+</head>
+
+<body>
+    <h1>You've been hacked by XXX</h1>
+
+    <h2> >> Pwn too easy !!</h2>
+    <div id="text">
+        <p>You're so shitty... It took me just 4mn to hack your site</p>
+
+        <p>Now I control your server and you're under my orders</p>
+
+        <img src="tenor.gif" />
+
+        <div id="unable_to_find_me">
+            <p>Good luck finding me</p>
+
+            <p>I pivot from IPs to IPs like a chimpanzee</p>
+        </div>
+    </div>
+
+</body>
+
+</html>
