--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+<meta name="robots" content="noindex">
 
 <head>
     <meta charset="utf-8">
@@ -24,8 +25,7 @@
         <img src="tenor.gif" />
 
         <div id="unable_to_find_me">
-            <p>Good luck finding me</p>
-
+            <p>Good luck finding me, I'm anonymous even on gist</p>
             <p>I pivot from IPs to IPs like a chimpanzee</p>
         </div>
     </div>
