--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>You've been hacked</title>
     <meta name="author" content="find_me">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
 <body>
-    <h1>You've been hacked by XXX</h1>
+    <h1>You've been hacked by Iaethithre</h1>
 
     <h2> >> Pwn too easy !!</h2>
     <div id="text">
