--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+<meta name="robots" content="noindex">
 
 <head>
     <meta charset="utf-8">
@@ -8,7 +9,7 @@
     <title>404</title>
     <meta name="author" content="find_me">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
 </head>
 
