--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="tenor.gif" />
 
         <div id="unable_to_find_me">
-            <p>Good luck finding me, I'm anonymous even on pastebin</p>
+            <p>Good luck finding me, I'm anonymous even on txtbin</p>
             <p>I pivot from IPs to IPs like a chimpanzee</p>
         </div>
     </div>
